--- a/index.html
+++ b/index.html
@@ -1,18 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Khalid Akhter</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Welcome To</h1>
-    <h1><span class= "name">Khalid Akhter</span> World!</h1>
-    <h3>Web Developer</h3>
+    <section>
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="name">Khalid Akhter</span> World!</h1>
+            <h3>Web Developer</h3>
+            <p>Hellow, Its me Khalid Akhter. Completed MBA from Dhaka University. Stucked in a business last few
+                years.Meantime completed different IT courses. At first got an scholership from IDB BISEW on Database
+                Administrator and completed Oracle programming Language. Eventually I became OCA and OCP </p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/khalid-akhter-4aa88679/">Hire Me</a>
+        </div>
+        <div class="half-width">
+            <img src="kld-2.png" alt="">
+
+        </div>
+    </section>
 </body>
+
 </html>
