--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="background">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="name">Khalid Akhter</span> World!</h1>
@@ -21,7 +21,8 @@
             <p>Hellow, Its me Khalid Akhter. Completed MBA from Dhaka University. Stucked in a business last few
                 years.Meantime completed different IT courses. At first got an scholership from IDB BISEW on Database
                 Administrator and completed Oracle programming Language. Eventually I became OCA and OCP </p>
-            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/khalid-akhter-4aa88679/">Hire Me</a>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/khalid-akhter-4aa88679/">Hire
+                Me</a>
         </div>
         <div class="half-width">
             <img src="kld-2.png" alt="">
