--- a/index.html
+++ b/index.html
@@ -29,6 +29,21 @@
 
         </div>
     </section>
+    <section class="Developer">
+        <div class="half-width">
+            <img src="kld-1.png" alt="">
+
+        </div>
+        <div class="half-width">
+            <h1>Journey To </h1>
+            <h1>fulfill a <span class="name">Big Dream</span></h1>
+            <h3>Become a web Developer</h3>
+            <p> After certain period of time completed CCNA-Routing & Switching. Also completed Red Hat Linux RHCSA &
+                RHCE. After that completed Graphics design and finally completed Wed development.</p>
+            <a class="link-button" target="_blank" href="CV_sales.pdf"> Download Resume</a>
+        </div>
+
+    </section>
 </body>
 
 </html>
