--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="background">
+    <section class="background Flexible">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="name">Khalid Akhter</span> World!</h1>
@@ -29,7 +29,7 @@
 
         </div>
     </section>
-    <section class="Developer">
+    <section class="Developer Flexible">
         <div class="half-width">
             <img src="kld-1.png" alt="">
 
@@ -44,6 +44,33 @@
         </div>
 
     </section>
+
+    <section class="Experiences">
+        <h1>Experiences</h1>
+        <div class="Flexible">
+            <div id=border-one class="shadow">
+                <h2>Graphics Designer</h2>
+                <h3 class="color">From 2013 to 2019| Adee Prokashon</h3>
+                <p>Starting career as a Graphics Designer in a publication house named Adee prokashon. Gradually invoved
+                    in
+                    production and sales team. Also involved in Digital marketing like facebook marketing.Leading a
+                    small
+                    sales team as well as follow up the daily production.</p>
+            </div>
+            <div id=border-two class="shadow">
+                <h2>Full Stack Developer</h2>
+                <h3 class="color">From 2021 to Present| Programming Hero</h3>
+                <p>Learend Full stack Web Development from Programming Hero platform. Completed different project works
+                    successfully. trying to do better in freelancing web development.Also looking for good job as a web
+                    Developer.</p>
+            </div>
+        </div>
+
+    </section>
+    <footer>
+        <p> (c) Khalid Akhter|2021, a programming hero initiative</p>
+    </footer>
+
 </body>
 
 </html>
